# cloud-api

./: .dockerignore  .gitignore  CHANGELOG-prod-to-staging.md  CLAUDE.md  COMPLETE_SECURITY_AUDIT.md  Cargo.toml  Dockerfile  MCP-Platform-API.postman_collection.json  MCP-Platform-Development.postman_environment.json  MCP-Platform-Production.postman_environment.json  Makefile  PRIVACY_AUDIT_SUMMARY.md  README.md  SECURITY_FIXES_SUMMARY.md  build-image.sh  cloud-api-vpc.yaml  deny.toml  docker-build.sh  docker-compose.yml  env.example  pinned-packages-builder.txt  pinned-packages-runtime.txt  pinned-packages.txt  refinery_schema_history.sql  repro.sh  repro_connection_retry.sh  repro_e2ee_stale_pubkey.sh  repro_no_usage_stats.sh  run.sh  rust-toolchain.toml  test_signature.sh
crates/api/: Cargo.toml
crates/api/benches/: validation_bench.rs
crates/api/src/: consts.rs  conversions.rs  credit_event_adapter.rs  lib.rs  main.rs  models.rs  ohttp_gateway.rs  openapi.rs  routes.rs
crates/api/src/middleware/: auth.rs  body_hash.rs  cache.rs  metrics.rs  mod.rs  rate_limit.rs  reporting_guard.rs  reporting_guard_tests.rs  request_correlation.rs  retry_after.rs  usage.rs
crates/api/src/routes/: admin.rs  api.rs  attestation.rs  audio.rs  auth.rs  auth_vpc.rs  billing.rs  common.rs  completions.rs  conversations.rs  credit_events.rs  dev.rs  extractors.rs  feature_requests.rs  files.rs  gateway.rs  health.rs  kyt.rs  mcp_connectors.rs  mcp_server.rs  mod.rs  models.rs  ohttp.rs  organization_members.rs  organizations.rs  realtime.rs  reporting_tokens.rs  responses.rs  services.rs  staking_farm.rs  unsupported.rs  usage.rs  users.rs  vector_stores.rs  web_search.rs  workspaces.rs
crates/api/tests/: attestation_test.rs  cleanup_test_databases.rs  e2e_admin_analytics.rs  e2e_admin_list_models.rs  e2e_admin_list_organizations.rs  e2e_admin_services.rs  e2e_api_keys.rs  e2e_audio_endpoints.rs  e2e_audio_image.rs  e2e_audio_transcriptions.rs  e2e_auth_tokens.rs  e2e_billing_and_models.rs  e2e_chat_encryption.rs  e2e_check_api_key.rs  e2e_client_disconnect.rs  e2e_completions_usage.rs  e2e_concurrent_limit.rs  e2e_context_aware_routing.rs  e2e_conversations.rs  e2e_credit_types.rs  e2e_duplicate_names.rs  e2e_embeddings.rs  e2e_error_msg.rs  e2e_external_providers.rs  e2e_files.rs  e2e_function_tools.rs  e2e_image_analysis.rs  e2e_mcp.rs  e2e_mcp_server.rs  e2e_message_metadata.rs  e2e_migration.rs  e2e_model_history_test.rs  e2e_multiturn_tools.rs  e2e_near_auth.rs  e2e_oauth_frontend_callback.rs  e2e_org_system_prompt.rs  e2e_pagination_validation.rs  e2e_provider_errors.rs  e2e_realtime_websocket.rs  e2e_repositories.rs  (+23 more)
crates/api/tests/common/: db_setup.rs  endpoints.rs  fake_ita.rs  ita_evidence.rs  ita_server.rs  mod.rs
crates/api/tests/e2e_all/: admin_activation_pricing_gate.rs  admin_analytics.rs  admin_deprecate_model.rs  admin_invitation_email_deliveries.rs  admin_list_models.rs  admin_organization_members.rs  admin_pricing_changes.rs  admin_provider_attribution_model_revenue.rs  admin_provider_attribution_platform.rs  admin_provider_attribution_support.rs  admin_schema_compatibility.rs  admin_services.rs  api_keys.rs  attestation_auth.rs  audio_image.rs  audio_transcriptions.rs  auth_tokens.rs  auto_redact.rs  auto_redact_adversarial.rs  backend_output_limits.rs  billing_and_models.rs  chat_encryption.rs  check_api_key.rs  chutes_catalog.rs  client_disconnect.rs  concurrent_limit.rs  conversations.rs  credit_events.rs  credit_types.rs  cross_workspace.rs  deser_error_envelope.rs  duplicate_names.rs  embeddings.rs  error_msg.rs  external_providers.rs  feature_requests.rs  files.rs  function_tools.rs  general.rs  glm52_tier_routing.rs  (+36 more)
crates/config/: Cargo.toml
crates/config/src/: lib.rs  types.rs
crates/config/src/ita/: mod.rs  policy.rs  tests.rs
crates/database/: Cargo.toml
crates/database/src/: cluster_manager.rs  constants.rs  lib.rs  mock.rs  models.rs  patroni_discovery.rs  pool.rs  shutdown_coordinator.rs  usage_reporting_indexes.rs
crates/database/src/migrations/: mod.rs
crates/database/src/repositories/: admin_access_token.rs  admin_composite.rs  analytics.rs  api_key.rs  api_key_model_affinity.rs  attestation.rs  conversation.rs  credit_event.rs  credit_event_repository_impl.rs  feature_request.rs  file.rs  mcp_connector.rs  mod.rs  model.rs  model_alias.rs  model_repository_impl.rs  near_nonce.rs  oauth_state.rs  organization.rs  organization_invitation.rs  organization_limits.rs  organization_limits_repository_impl.rs  organization_reporting_token.rs  organization_reporting_token_row.rs  organization_service_usage.rs  organization_service_usage_reporting_summary.rs  organization_staking_farm_sources.rs  organization_usage.rs  organization_usage_reporting.rs  organization_usage_reporting_summary.rs  reporting_query.rs  reporting_usage_summary.rs  response.rs  response_item.rs  retry.rs  service.rs  service_usage_repository_impl.rs  session.rs  usage_repository_impl.rs  user.rs  (+3 more)
crates/database/src/seed/: 001__seed_mock_admin.sql
crates/database/tests/: organization_reporting_token.rs  organization_service_usage_reporting.rs  organization_usage_reporting.rs  usage_reporting_indexes.rs
crates/database/tests/support/: mod.rs  service_usage_reporting_pool.rs  service_usage_reporting_rows.rs  service_usage_reporting_support.rs
crates/domain/: Cargo.toml
crates/domain/examples/: test_streaming.rs
crates/domain/src/: conversations.rs  errors.rs  lib.rs  models.rs  responses.rs  services.rs
crates/inference_providers/: Cargo.toml
crates/inference_providers/src/: bucket_keepalive.rs  chunk_builder.rs  lib.rs  mock.rs  models.rs  rotation.rs  spki_verifier.rs  sse_parser.rs
crates/inference_providers/tests/: integration_tests.rs
crates/services/: Cargo.toml
crates/services/benches/: auth_bench.rs  completions_bench.rs  provider_pool_bench.rs  responses_bench.rs
crates/services/src/: common.rs  email.rs  id_prefixes.rs  kyt.rs  lib.rs  reporting_usage.rs  staking_farm.rs  test_utils.rs
crates/services/tests/: attestation_verification_test.rs
(+342 files in other folders)
