[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
config = { path = "../config" }
database = { path = "../database" }
services = { path = "../services" }
inference_providers = { path = "../inference_providers" }
# Authentication dependencies
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.5", features = ["v4"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
# For TypedHeader support
headers = "0.4"
# OpenAPI documentation generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
thiserror = "2.0"
# Body hashing middleware dependencies
sha2 = "0.10"
hex = "0.4"
bytes = "1.5"
http-body-util = "0.1"
# AWS S3 for file storage
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.70"
# Ordered collections
indexmap = "2"

[dev-dependencies]
axum-test = "18"
serde_json = "1.0"
url = "2.5"
tokio-test = "0.4"
sha2 = "0.10"
base64 = "0.22.1"
dotenvy = "0.15.7"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha3 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
