[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
config = { path = "../config" }
database = { path = "../database" }
services = { path = "../services" }
inference_providers = { path = "../inference_providers" }
# Authentication dependencies
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["cors", "compression-gzip", "compression-br", "set-header"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["metrics", "grpc-tonic"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
# For TypedHeader support
headers = "0.4"
# OpenAPI documentation generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
thiserror = "2.0"
# Body hashing middleware dependencies
sha2 = "0.11"
hex = "0.4"
# Constant-time comparison for service-token auth on /v1/internal/usage
subtle = "2.6"
bytes = "1.11"
http-body-util = "0.1"
# AWS S3 for file storage
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.134", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
# NEAR wallet authentication
near-api = "0.8.6"
base64 = "0.22"
# Ordered collections
indexmap = "2"
moka = { version = "0.12.15", features = ["future"] }
# URL encoding
urlencoding = "2.1"
# OHTTP gateway (RFC 9458) — HPKE-based request encapsulation/decapsulation
ohttp = { version = "0.7", features = ["server", "stream", "rust-hpke"] }
bhttp = "0.8"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["compat", "io"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
axum-test = "21"
wiremock = "0.6"
serde_json = "1.0"
url = "2.5"
tokio-test = "0.4"
sha2 = "0.11"
base64 = "0.22.1"
dotenvy = "0.15.7"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha3 = "0.12"
hmac = "0.13"
tokio-postgres = "0.7.18"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
ed25519-dalek = { version = "3.0", features = ["rand_core"] }
rand = "0.10"
services = { path = "../services", features = ["test-mocks"] }
async-trait = "0.1"

[[test]]
name = "e2e_all"
path = "tests/e2e_all/main.rs"
