[package]
name = "database"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# PostgreSQL client library for async Rust
# Documentation: https://docs.rs/tokio-postgres/latest/tokio_postgres/
# Crate: https://crates.io/crates/tokio-postgres
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# Connection pooling for tokio-postgres
# Documentation: https://docs.rs/deadpool-postgres/latest/deadpool_postgres/
# Crate: https://crates.io/crates/deadpool-postgres
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
deadpool = "0.12"

# TLS support for PostgreSQL connections (required for remote databases like DigitalOcean)
# Documentation: https://docs.rs/tokio-postgres-rustls/latest/tokio_postgres_rustls/
tokio-postgres-rustls = "0.13"
# Rustls with ring crypto provider
rustls = { version = "0.23", features = ["ring"] }
# Platform-native certificate verifier with OS integration and revocation support
# Documentation: https://docs.rs/rustls-platform-verifier/latest/rustls_platform_verifier/
rustls-platform-verifier = "0.6"
# PEM file parsing for custom certificates
rustls-pemfile = "2.0"

# PostgreSQL types
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# Core dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
services = { path = "../services" }
config = { path = "../config" }

# For database migrations
refinery = { version = "0.9", features = ["tokio-postgres"] }

# For hashing API keys and session tokens
sha2 = "0.10"
rand = "0.9.2"

# For User-Agent normalization
regex = "1.10"

# For Patroni discovery
reqwest = { version = "0.12", features = ["json"] }

# For TLS connections to PostgreSQL
postgres-native-tls = "0.5"
native-tls = "0.2"
