[package]
name = "domain"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
bytes = "1.5"
