[package]
name = "domain"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
thiserror = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { path = "../config" }
database = { path = "../database" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
bytes = "1.5"
dstack-sdk = "0.1"
hex = "0.4"
# OAuth2 authentication
oauth2 = { version = "5", features = ["reqwest"] }
url = "2.5"
uuid = { version = "1.5", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
# HTTP mocking library for testing streaming responses
# Documentation: https://docs.rs/httpmock/latest/httpmock/
# Crate: https://crates.io/crates/httpmock
httpmock = "0.7"
tokio-test = "0.4"
