[package]
name = "inference_providers"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots", "multipart"] }
futures-util = "0.3"
tracing = "0.1"
dstack-sdk = "0.1.2"
dstack-sdk-types = "0.1.2"
serde_urlencoded = "0.7.1"
regex = "1"
sha2 = "0.10"

# Dev dependencies for testing and examples
[dev-dependencies]
futures-util = "0.3"
tokio-test = "0.4"
dotenvy = "0.15.7"