[package]
name = "inference_providers"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
tokio = { version = "1.50", features = ["full"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-native-certs = "0.8"
x509-parser = "0.18"
hex = "0.4"
futures-util = "0.3"
tracing = "0.1"
dstack-sdk = "0.1.3"
dstack-sdk-types = "0.1.2"
serde_urlencoded = "0.7.1"
regex = "1"
sha2 = "0.11"
url = "2.5"
# Chutes E2EE transport: ML-KEM-768 (FIPS 203) + HKDF-SHA256 + ChaCha20-Poly1305.
# Exact-pinned (`=`) to match Chutes' own RustCrypto reference client
# (github.com/chutesai/e2ee-test), which interoperates with their server — a
# floated minor could change the KEM wire encoding and silently break interop.
ml-kem = { version = "=0.3.2", features = ["getrandom"] }
hkdf = "0.13"
chacha20poly1305 = "0.10"
flate2 = "1"
getrandom = "0.3"
async-stream = "0.3"

# Dev dependencies for testing and examples
[dev-dependencies]
futures-util = "0.3"
tokio-test = "0.4"
dotenvy = "0.15.7"
serial_test = "3.4"