[package]
name = "services"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
inference_providers = { path = "../inference_providers" }
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
async-trait = "0.1"
futures = "0.3"