[package]
name = "services"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "v5", "serde"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
inference_providers = { path = "../inference_providers" }
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"
config = { path = "../config" }
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
utoipa = "5.3"
# OAuth2 authentication
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
bytes = "1.11"
tokio-stream = "0.1"
# MCP protocol
rmcp = { version = "0.15", features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
hex = "0.4"
# NEAR wallet authentication (NEP-413)
near-api = "0.8.3"
dstack-sdk = "0.1.2"
dstack-sdk-types = "0.1.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha3 = "0.10"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
regex = "1.12"
# AWS S3 for file storage
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.122"
# Encryption for file storage
aes-gcm = "0.10"
# HMAC for VPC signature verification
hmac = "0.12"
sha2 = "0.10"
moka = { version = "0.12.13", features = ["future"] }
bloomfilter = "3.0.1"
mockall = { version = "0.14", optional = true }
base64 = "0.22"

[features]
default = []
test-mocks = ["mockall"]

[dev-dependencies]
tokio-test = "0.4"
async-trait = "0.1"
futures = "0.3"
mockall = "0.14"
